old slurm/slurm-5285.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
In file included from include/f/cuda_pattern/cuda_pattern.hpp:5:
include/f/cuda_pattern/cuda_pattern_config.hpp:23:29: error: duplicate member 'per_tilt_dim_size'
std::vector<size_type>      per_tilt_dim_size;
                            ^
include/f/cuda_pattern/cuda_pattern_config.hpp:22:19: note: previous declaration is here
        size_type per_tilt_dim_size;
                  ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
/var/spool/slurmd/job05285/slurm_script: line 16:  9324 Segmentation fault      (core dumped) ./direct_cuda_pattern

real	0m0.085s
user	0m0.000s
sys	0m0.000s
